modularize: extract import/export into separate file

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="dropdown">
           <button class="dropbtn" id="exportDropdownBtn">Export</button>
           <div class="dropdown-content" id="exportDropdown">
-            <a class="exportDataBtn" id="exportDataBtn">Export data (JSON)</a>
+            <a class="exportDataBtn" id="exportDataJsonBtn">Export data (JSON)</a>
             <a class="exportDataBtn" id="exportDataCsvBtn">Export data (CSV)</a>
           </div>
         </div>
@@ -281,13 +281,14 @@
         </p>
       </footer>
     </div>
+  </div>
 
-    <script type="module" src="/src/main.ts"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-    <script defer src="https://umami.wolfez.dev/script.js"
-      data-website-id="c08875fb-7cbc-48eb-b3f1-a6eeb3e57773"></script>
+  <script type="module" src="/src/main.ts"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+  <script defer src="https://umami.wolfez.dev/script.js"
+    data-website-id="c08875fb-7cbc-48eb-b3f1-a6eeb3e57773"></script>
 </body>
 
 </html>
